; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_cmd_ao_reload.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_cmd_ao_reload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_cmd_ctx = type { %struct.MPContext* }
%struct.MPContext = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @cmd_ao_reload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmd_ao_reload(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.mp_cmd_ctx*, align 8
  %4 = alloca %struct.MPContext*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.mp_cmd_ctx*
  store %struct.mp_cmd_ctx* %6, %struct.mp_cmd_ctx** %3, align 8
  %7 = load %struct.mp_cmd_ctx*, %struct.mp_cmd_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.mp_cmd_ctx, %struct.mp_cmd_ctx* %7, i32 0, i32 0
  %9 = load %struct.MPContext*, %struct.MPContext** %8, align 8
  store %struct.MPContext* %9, %struct.MPContext** %4, align 8
  %10 = load %struct.MPContext*, %struct.MPContext** %4, align 8
  %11 = call i32 @reload_audio_output(%struct.MPContext* %10)
  ret void
}

declare dso_local i32 @reload_audio_output(%struct.MPContext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
